--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-localization": "^1.0.19"
+    "react-localization": "^1.0.19",
+    "react-query": "^3.39.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
